--- a/css/style.css
+++ b/css/style.css
@@ -48,4 +48,20 @@ img:hover {
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
+.column {
+  width: 32%;
+  display: inline-block
+}
+
+.small {
+  width: 98%
+}
+
+.medium {
+  width: 199%;
+}
+
+.large {
+  width: 300%;
+}
 /* create your tile classes! we recommend .small .med .large */
